The price is no longer cut off and it displays correctly (#75)

--- a/wwwroot/css/Cards.css
+++ b/wwwroot/css/Cards.css
@@ -46,7 +46,7 @@ img{
 }
 
 .card-price {
-    font-size: xx-large;
+    font-size: large;
     font-weight: bold;
     width: 40%;
     display: inline-block;
